# tursopy

./: .env  .gitignore  README.md  WARP.md  advanced_queries.py  batch.py  connection.py  crud.py  pyproject.toml  requirements.txt  run.py  setup.py  test.py  tox.ini  turso_vector.py
.github/workflows/: ci.yml  python-publish.yml
scripts/: async_crud_smoke_test.py  crud_smoke_test.py  verify_integration.py
tests/: test_async.py  test_async_foreign_key.py  test_sync.py
turso_python/: __init__.py  async_connection.py  async_crud.py  batch.py  connection.py  crud.py  exceptions.py  response_parser.py  result.py  schema_validator.py  turso_vector.py
